# Tapd_Auto

./: .env.example  .gitignore  README.md  TAPD每日复盘链路设计.md  config.example.yaml  implementation-plan.md  interface-rules.md  pyproject.toml  tapd_daily.py  test_tapd_daily.py
configs/: config.example.yaml
docs/design/: daily-review-design.md
docs/operations/: account-sync.md  implementation-plan.md  interface-rules.md  production-runbook.md
docs/research/: tapd-dingtalk-api-research.md
docs/superpowers/specs/: 2026-05-26-tapd-daily-review-design.md
scripts/: crontab.example  preview.sh  run_daily.sh
src/tapd_auto/: __init__.py  cli.py  config.py  dingtalk.py  preview.py  render.py  report.py  scope.py  tapd.py
tests/: test_package_entrypoint.py  test_preview.py  test_tapd_daily.py
