[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapd-auto"
version = "0.1.0"
description = "TAPD 每日复盘报表和钉钉通知工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.scripts]
tapd-daily = "tapd_auto.cli:run_cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
